fixed horizontal scrollbar bug

--- a/css/custom.css
+++ b/css/custom.css
@@ -35,7 +35,6 @@ header {
 	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 	-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
-          
 }
 
 .inner-header {
@@ -51,9 +50,9 @@ header {
 }
 
 .navv {
+	line-height: 78px;
 	padding: 0;
 	float: right;
-	line-height: 78px;
 }
 
 .navv li {
@@ -62,13 +61,13 @@ header {
 }
 
 .navv li a {
-	text-decoration: none;
-	color: white;
-  	text-align: center;
   	display: inline-block;
   	font-family: 'Source Sans Pro', sans-serif;
-	text-shadow:none; box-shadow: none;
 	font-size: 16px; font-weight: 400;
+	color: white;
+	text-decoration: none;
+  	text-align: center;
+	text-shadow:none; box-shadow: none;
 }
 
 .navv li .active {
@@ -89,14 +88,14 @@ footer {
 	height: 50px; width: 100%;
 	margin: 0; padding: 0;
 	overflow: hidden;
-	z-index: 10;
+	/*z-index: 10;*/
 	background-color: /*grey*/#515356;
 	border-bottom: 6px solid /*gold*/#FFC222;
 }
 
 .inner-footer {
-	width: 95%; /*max-width: 69em;*/
-	margin: 0 auto;
+	width: 95%; max-width: 69em;
+	margin: 0;
 	padding: 0 1em;
 }
 
@@ -152,12 +151,12 @@ footer .sitemap a:hover {
 ######################################################################## */
 .content {
 	top: 78px; position: relative;
+	margin: 0;
 }
 
 .vision {
 	width: 100%;
 	background-color: /*gold*/#FFC222;
-	border: 1px solid rgba(0, 0, 0, 0);
 	margin: auto; padding: 0;
 }
 
@@ -228,7 +227,9 @@ footer .sitemap a:hover {
 
 
 
-
+/* ########################################################################
+                           	WHO IS ENACTUS FOR
+######################################################################## */
 .sign-up h2, .hero {
 	text-align: center;
 	font-family: 'Source Sans Pro', sans-serif;
@@ -242,13 +243,14 @@ footer .sitemap a:hover {
 }
 
 .email-form {
-	margin: auto;
+	width: 100%;
+	/*margin: auto 0;*/
 	text-align: center;
 	position: relative;
 }
 
 .input-wrap {
-	/*height: 48px;*/
+	/*height: 48px;*/ width: 100%;
 	/*border: 1px solid red;*/
 	margin-bottom: 12px;
 }
@@ -301,7 +303,8 @@ input[type="text"]:focus {
 .dp {
 	height: 120px; width: 120px;
 	border: 2px solid #FFC222;
-	background-color: grey;	
+	background-color: grey;
+	margin: 12px;	
 }
 
 .ptitle {
@@ -312,6 +315,7 @@ input[type="text"]:focus {
 .pname {
 	line-height: 1.2em;
 	margin-top: 6px;
+	padding-left: 6px;
 	background-color: #FFC222;
 	font-weight: bold;
 	font-size: 24px;
@@ -355,7 +359,7 @@ input[type="text"]:focus {
 	.vision h1 {
 		font-size: 28px;
 	}
-	.hero {
+	.sign-up h2, .hero {
 		font-size: 30px;
 	}
 
@@ -363,15 +367,23 @@ input[type="text"]:focus {
 	font-size: 14px;
 	}	
 
-	.advisor img {
-		border: 1px solid red;
-		margin: auto 0;
+	.partner {
+		max-width: 250px;
+		display: block;
+		margin: 0 auto;
 	}
 
-	.advisor-square img {
-		height: 150px; width: 350px;
-		border: 1px solid red;
+	.sign-up p {
+		text-align: center;
 	}
+
+	.thumbnail {
+		margin: 12px;
+		border: 0.5px solid /*grey*/#515356;
+		border-radius: 0px;
+		box-shadow: 2px 2px 5px #888;
+	}
+
 
 	.footer social, .footer sitemap {
 		display: block;
